# Image-processing

./: .gitignore  README.md
Lab1-intro/: 01_intro.ipynb  pyproject.toml
Lab10-bilateral-filtering/: 11_morphology.ipynb  pyproject.toml
Lab2-point-operations/: 02_point_part1.ipynb  02_point_part2.ipynb  pyproject.toml
Lab3-histogram/: 03_histogram.ipynb  pyproject.toml
Lab4-binarization/: 04_thresholding.ipynb  pyproject.toml
Lab5-resolution/: 05_resolution.ipynb  pyproject.toml
Lab6-preprocessing/: 06_context.ipynb  pyproject.toml
Lab7-morphology/: 10_morphology.ipynb  11_morphology.ipynb  pyproject.toml
