[tool.poetry]
name = "lab7-bilateral-filtering"
version = "0.1.0"
description = ""
authors = ["Kamil Rudny <k.rudny1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
matplotlib = "^3.10.0"
jupyter = "^1.1.1"
scipy = "^1.14.1"
opencv-python = "^4.10.0.84"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
