[tool.poetry]
name = "lab3-histogram"
version = "0.1.0"
description = ""
authors = ["Kamil Rudny <134285490+krudny@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
numpy = "^2.1.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
