[tool.poetry]
name = "lab5-resolution"
version = "0.1.0"
description = ""
authors = ["Kamil Rudny <k.rudny1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
opencv-python = "^4.10.0.84"
numpy = "^2.1.3"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
